--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/app_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/app_logo"
+        android:roundIcon="@mipmap/app_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WorkoutTimer">
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:exported="true">
@@ -19,7 +19,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:exported="true">
+        </activity>
         <activity android:name=".TimerActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:exported="true"/>
+        <activity android:name=".AboutActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:exported="true"/>
+        <activity android:name=".FeedbackActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:exported="true"/>
