--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/app_logo"
+        android:icon="@mipmap/app_logo_final_round"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/app_logo_round"
+        android:roundIcon="@mipmap/app_logo_final_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WorkoutTimer">
         <activity
